--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,6 +2,7 @@
 // Layout
 $header-height: 5.5rem;
 $header-max-width: 1200px;
+$page-padding-vertical: 3rem;
 $content-padding: 1.2rem;
 $content-max-width: 550px;
 $content-wide-max-width: 1000px;    // Used in blog page
